Update group creation to use new endpoint and support dynamic group display

--- a/frontend/create_group.html
+++ b/frontend/create_group.html
@@ -73,7 +73,7 @@
             }
 
             try {
-                const res = await fetch("https://ultramarathon-finder-backend.onrender.com/api/groups/create-group", {
+                const res = await fetch("https://ultramarathon-finder-backend.onrender.com/api/groups/create", {
                     method: "POST",
                     headers: {
                         "Content-Type": "application/json",
