--- a/frontend/login.html
+++ b/frontend/login.html
@@ -113,6 +113,7 @@
 
                 if (response.ok && data.token) {
                     localStorage.setItem('token', data.token);
+                    localStorage.setItem('username', data.user.username);
                     localStorage.setItem('lastActive', Date.now().toString());
                     loginMessage.textContent = 'Login successful!';
                     loginMessage.classList.add('success-message');
