--- a/frontend/comments.html
+++ b/frontend/comments.html
@@ -29,16 +29,25 @@
 
     <main class="forum-wrapper">
         <h1 class="comments-heading">Post & Replies</h1>
+
+        <!-- Main Post -->
         <section id="post-details"></section>
 
-        <section id="comments-container">
-            <div id="comment-list"></div>
+        <!-- Show reply toggle -->
+        <div style="text-align: center; margin-bottom: 1rem;">
+            <button id="show-reply-form-btn" class="join-btn">💬 Reply to Post</button>
+        </div>
 
-            <form id="comment-form">
+        <!-- Hidden Reply Form -->
+        <section id="comments-container">
+            <form id="comment-form" style="display: none;">
                 <textarea id="comment-content" placeholder="Write your reply..." required></textarea>
                 <button type="submit">Reply</button>
                 <p id="comment-error" class="error-message"></p>
             </form>
+
+            <!-- Comment Thread -->
+            <div id="comment-list"></div>
         </section>
     </main>
 
