--- a/frontend/group_forum.html
+++ b/frontend/group_forum.html
@@ -143,6 +143,7 @@
             }
         });
 
+        // Restrict posting to only joined group members
         if (token && groupName) {
             fetch("https://ultramarathon-finder-backend.onrender.com/api/auth/account", {
                 headers: { Authorization: `Bearer ${token}` }
@@ -167,6 +168,52 @@
                     console.error("Error checking joined groups:", err);
                 });
         }
+
+        // === Action Handlers for Edit / Delete / Reply Buttons ===
+        document.addEventListener('click', async (e) => {
+            const postId = e.target.dataset.id;
+
+            if (e.target.classList.contains('delete-btn')) {
+                if (!confirm('Are you sure you want to delete this post?')) return;
+                try {
+                    const res = await fetch(`https://ultramarathon-finder-backend.onrender.com/api/groups/group-posts/${postId}`, {
+                        method: 'DELETE',
+                        headers: { Authorization: `Bearer ${token}` }
+                    });
+                    if (res.ok) fetchGroupPosts();
+                    else alert('Failed to delete post.');
+                } catch (err) {
+                    console.error('Delete error:', err);
+                }
+            }
+
+            if (e.target.classList.contains('edit-btn')) {
+                const oldTitle = e.target.dataset.title;
+                const oldMsg = e.target.dataset.message;
+                const newTitle = prompt('Edit Title:', oldTitle);
+                const newMessage = prompt('Edit Message:', oldMsg);
+                if (!newTitle || !newMessage) return;
+
+                try {
+                    const res = await fetch(`https://ultramarathon-finder-backend.onrender.com/api/groups/group-posts/${postId}`, {
+                        method: 'PATCH',
+                        headers: {
+                            'Content-Type': 'application/json',
+                            Authorization: `Bearer ${token}`
+                        },
+                        body: JSON.stringify({ title: newTitle, message: newMessage })
+                    });
+                    if (res.ok) fetchGroupPosts();
+                    else alert('Failed to edit post.');
+                } catch (err) {
+                    console.error('Edit error:', err);
+                }
+            }
+
+            if (e.target.classList.contains('reply-btn')) {
+                alert("Reply button clicked (reply feature coming in next step).");
+            }
+        });
     </script>
 </body>
 
