Move forum files to forum/ folder, add category view, update paths

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -102,7 +102,7 @@
         <section class="latest-posts">
             <h2>Recent Conversations</h2>
             <div id="forum-preview-list" class="forum-preview-list"></div>
-            <button class="orange-btn" onclick="window.location.href='forum.html'">View All Posts</button>
+            <button class="orange-btn" onclick="window.location.href='forum/forum.html'">View All Posts</button>
         </section>
 
         <!-- Article Carousel -->
