Final path fixes and forum polish for full deploy

--- a/frontend/forum/category.html
+++ b/frontend/forum/category.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Category Forum - Ultramarathon Connect</title>
-    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="/style.css" />
     <script defer src="category.js"></script>
 </head>
 
@@ -13,15 +13,15 @@
     <header class="sticky-header">
         <div class="header-inner">
             <div class="header-left">
-                <img src="../ultra.png" alt="Ultramarathon Connect Logo" class="logo" />
+                <img src="/ultra.png" alt="Ultramarathon Connect Logo" class="logo" />
                 <span class="site-title">Ultramarathon Connect</span>
             </div>
             <nav class="header-right">
                 <ul class="menu">
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="../race_directory.html">Race Directory</a></li>
-                    <li><a href="forum.html">Runner Community</a></li>
-                    <li><a href="../account.html">My Account</a></li>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="/race_directory.html">Race Directory</a></li>
+                    <li><a href="/forum.html">Runner Community</a></li>
+                    <li><a href="/account.html">My Account</a></li>
                 </ul>
             </nav>
         </div>
