--- a/frontend/forum/create_group.html
+++ b/frontend/forum/create_group.html
@@ -5,21 +5,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Create Training Group - Ultramarathon Connect</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" />
 </head>
 
 <body class="forum-page">
     <header class="sticky-header">
         <div class="header-inner">
             <div class="header-left">
-                <img src="ultra.png" alt="Ultramarathon Connect Logo" class="logo" />
+                <img src="/ultra.png" alt="Ultramarathon Connect Logo" class="logo" />
                 <span class="site-title">UltramarathonConnect</span>
             </div>
             <nav class="header-right">
                 <ul class="menu">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="race_directory.html">Race Directory</a></li>
-                    <li><a href="forum.html">Runner Community</a></li>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="/race_directory.html">Race Directory</a></li>
+                    <li><a href="/forum.html">Runner Community</a></li>
                 </ul>
             </nav>
         </div>
@@ -42,9 +42,9 @@
 
     <footer class="site-footer">
         <div class="footer-links">
-            <a href="forum.html">Back to Forum</a> |
-            <a href="faq.html">FAQ</a> |
-            <a href="privacy.html">Privacy Policy</a> |
+            <a href="/forum.html">Back to Forum</a> |
+            <a href="/faq.html">FAQ</a> |
+            <a href="/privacy.html">Privacy Policy</a> |
             <span>Email: <a href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a></span>
         </div>
         <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
@@ -84,7 +84,7 @@
 
                 if (res.ok) {
                     const encodedName = encodeURIComponent(raceName);
-                    window.location.href = `group_forum.html?group=${encodedName}`;
+                    window.location.href = `/forum/group_forum.html?group=${encodedName}`;
                 } else {
                     const errData = await res.json();
                     errorEl.textContent = errData.message || "Error creating group.";
