--- a/frontend/forum/forum.html
+++ b/frontend/forum/forum.html
@@ -5,24 +5,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Runner Community - Ultramarathon Connect</title>
-    <link rel="stylesheet" href="../style.css" />
-    <link rel="stylesheet" href="../alanai_chatbot/chat-widget.css" />
+    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/alanai_chatbot/chat-widget.css" />
 </head>
 
 <body class="forum-page">
     <header class="sticky-header">
         <div class="header-inner">
             <div class="header-left">
-                <img src="../ultra.png" alt="Ultramarathon Connect Logo" class="logo" />
+                <img src="/ultra.png" alt="Ultramarathon Connect Logo" class="logo" />
                 <span class="site-title">UltramarathonConnect</span>
             </div>
             <button class="menu-toggle">☰</button>
             <nav class="header-right">
                 <ul class="menu">
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="../race_directory.html">Race Directory</a></li>
-                    <li><a href="forum.html">Runner Community</a></li>
-                    <li id="account-tab" class="auth-tab"><a href="../login.html">Login</a></li>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="/race_directory.html">Race Directory</a></li>
+                    <li><a href="/forum.html">Runner Community</a></li>
+                    <li id="account-tab" class="auth-tab"><a href="/login.html">Login</a></li>
                 </ul>
             </nav>
         </div>
@@ -32,48 +32,48 @@
         <h1 class="forum-heading">Runner-to-Runner Forum</h1>
         <p class="forum-subheading">Ask questions, share insights, and connect with ultrarunners around the world.</p>
 
-        <!-- Updated Category Cards (Links) -->
+        <!-- Updated Category Cards -->
         <section class="forum-categories">
-            <a href="category.html?topic=Training%20Tips" class="category-card">
+            <a href="/forum/category.html?topic=Training%20Tips" class="category-card">
                 <span class="emoji">🏋️</span>
                 <h3>Training Tips</h3>
                 <p>Strategies, plans, and advice from seasoned runners.</p>
             </a>
-            <a href="category.html?topic=Gear%20Recommendations" class="category-card">
+            <a href="/forum/category.html?topic=Gear%20Recommendations" class="category-card">
                 <span class="emoji">🎒</span>
                 <h3>Gear Recommendations</h3>
                 <p>Discuss your favorite gear for trails, races, and recovery.</p>
             </a>
-            <a href="category.html?topic=Race%20Advice" class="category-card">
+            <a href="/forum/category.html?topic=Race%20Advice" class="category-card">
                 <span class="emoji">🥇</span>
                 <h3>Race Advice</h3>
                 <p>Tips on race strategy, pacing, and preparation.</p>
             </a>
-            <a href="category.html?topic=Nutrition%20Tips" class="category-card">
+            <a href="/forum/category.html?topic=Nutrition%20Tips" class="category-card">
                 <span class="emoji">🥗</span>
                 <h3>Nutrition Tips</h3>
                 <p>Talk about fueling, hydration, and supplements.</p>
             </a>
-            <a href="category.html?topic=Meetup%20Requests" class="category-card">
+            <a href="/forum/category.html?topic=Meetup%20Requests" class="category-card">
                 <span class="emoji">🤝</span>
                 <h3>Meetup Requests</h3>
                 <p>Looking to find a training buddy or local group? Post here.</p>
             </a>
-            <a href="category.html?topic=General%20Chat" class="category-card">
+            <a href="/forum/category.html?topic=General%20Chat" class="category-card">
                 <span class="emoji">💬</span>
                 <h3>General Chat</h3>
                 <p>Talk about anything ultrarunning related!</p>
             </a>
         </section>
 
-        <!-- 🔥 Training Groups by Race Section -->
+        <!-- 🔥 Training Groups Section -->
         <section class="training-groups-section">
             <h2>📍 Training Groups by Race</h2>
             <p>Join or create a training group for an upcoming ultramarathon you're running!</p>
 
             <div class="training-group">
                 <h4>
-                    <a href="group_forum.html?group=Western%20States%20100%20(CA)">Western States 100 (CA)</a>
+                    <a href="/forum/group_forum.html?group=Western%20States%20100%20(CA)">Western States 100 (CA)</a>
                 </h4>
                 <p>Group for runners training for Western States. Weekly Zoom calls + local meetups in NorCal.</p>
                 <button class="join-btn">Join Group</button>
@@ -81,13 +81,13 @@
 
             <div class="training-group">
                 <h4>
-                    <a href="group_forum.html?group=UTMB%20(France)">UTMB (France)</a>
+                    <a href="/forum/group_forum.html?group=UTMB%20(France)">UTMB (France)</a>
                 </h4>
                 <p>Global group for UTMB training. Share routes, advice, and gear picks.</p>
                 <button class="join-btn">Join Group</button>
             </div>
 
-            <a href="create_group.html" class="create-group-btn">+ Create New Training Group</a>
+            <a href="/forum/create_group.html" class="create-group-btn">+ Create New Training Group</a>
         </section>
     </main>
 
@@ -103,18 +103,18 @@
 
     <footer class="site-footer">
         <div class="footer-links">
-            <a href="../contact.html">Contact Us</a> |
-            <a href="../privacy.html">Privacy Policy</a> |
-            <a href="../termsofservice.html">Terms of Service</a> |
-            <a href="../faq.html">FAQ</a> |
+            <a href="/contact.html">Contact Us</a> |
+            <a href="/privacy.html">Privacy Policy</a> |
+            <a href="/termsofservice.html">Terms of Service</a> |
+            <a href="/faq.html">FAQ</a> |
             <span>Email: <a href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a></span>
         </div>
         <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
     </footer>
 
-    <script src="../forum/forum_script.js"></script>
-    <script src="../index_script.js"></script>
-    <script src="../alanai_chatbot/alan.js"></script>
+    <script src="/forum/forum_script.js"></script>
+    <script src="/index_script.js"></script>
+    <script src="/alanai_chatbot/alan.js"></script>
 </body>
 
 </html>
