--- a/frontend/forum/group_forum.html
+++ b/frontend/forum/group_forum.html
@@ -5,23 +5,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Group Forum - Ultramarathon Connect</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" />
 </head>
 
 <body class="forum-page">
     <header class="sticky-header">
         <div class="header-inner">
             <div class="header-left">
-                <img src="ultra.png" alt="Ultramarathon Connect Logo" class="logo" />
+                <img src="/ultra.png" alt="Ultramarathon Connect Logo" class="logo" />
                 <span class="site-title">UltramarathonConnect</span>
             </div>
             <button class="menu-toggle">☰</button>
             <nav class="header-right">
                 <ul class="menu">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="race_directory.html">Race Directory</a></li>
-                    <li><a href="forum.html">Runner Community</a></li>
-                    <li id="account-tab" class="auth-tab"><a href="login.html">Login</a></li>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="/race_directory.html">Race Directory</a></li>
+                    <li><a href="/forum.html">Runner Community</a></li>
+                    <li id="account-tab" class="auth-tab"><a href="/login.html">Login</a></li>
                 </ul>
             </nav>
         </div>
@@ -47,9 +47,9 @@
 
     <footer class="site-footer">
         <div class="footer-links">
-            <a href="forum.html">Back to Main Forum</a> |
-            <a href="faq.html">FAQ</a> |
-            <a href="privacy.html">Privacy Policy</a> |
+            <a href="/forum.html">Back to Main Forum</a> |
+            <a href="/faq.html">FAQ</a> |
+            <a href="/privacy.html">Privacy Policy</a> |
             <span>Email: <a href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a></span>
         </div>
         <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
