Add Strava attribution to training log for Developer Program compliance

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -90,6 +90,8 @@
             <p class="note">🔒 Training Log is available only to logged-in users.</p>
         </section>
 
+        <p class="strava-credit">Data provided by <a href="https://www.strava.com" target="_blank">Strava</a></p>
+
         <!-- Race Map -->
         <section class="map-preview">
             <h2>Explore Upcoming Races</h2>
