--- a/frontend/training_log.html
+++ b/frontend/training_log.html
@@ -35,6 +35,8 @@
             <button id="refresh-strava" class="button" style="display:none;">Refresh Activities</button>
         </div>
 
+        <p class="strava-credit">Data provided by <a href="https://www.strava.com" target="_blank">Strava</a></p>
+
         <div id="weekly-summary" class="summary-card" style="display: none;"></div>
 
         <section id="activity-section" style="display: none;">
