--- a/frontend/forum/category.html
+++ b/frontend/forum/category.html
@@ -14,14 +14,26 @@
         <div class="header-inner">
             <div class="header-left">
                 <img src="/ultra.png" alt="Ultramarathon Connect Logo" class="logo" />
-                <span class="site-title">Ultramarathon Connect</span>
+                <span class="site-title">UltramarathonConnect</span>
             </div>
+            <button class="menu-toggle">☰</button>
             <nav class="header-right">
                 <ul class="menu">
                     <li><a href="/index.html">Home</a></li>
                     <li><a href="/race_directory.html">Race Directory</a></li>
                     <li><a href="/forum.html">Runner Community</a></li>
-                    <li><a href="/account.html">My Account</a></li>
+                    <li id="account-tab" class="auth-tab"><a href="/login.html">Login</a></li>
+                    <li class="dropdown auth-dropdown" style="display: none;">
+                        <a href="/account.html">
+                            <img id="nav-profile-pic" src="/images/default-profile.png" alt="Profile"
+                                class="nav-profile-img" />
+                            <span id="nav-username">My Account</span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="/account.html">View Profile</a></li>
+                            <li><a href="/logout.html">Sign Out</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -44,6 +56,23 @@
         <!-- Posts will be loaded here -->
         <div id="posts-container"></div>
     </main>
+
+    <!-- Auth-based header script -->
+    <script>
+        const token = localStorage.getItem("token");
+        const username = localStorage.getItem("username");
+        const profilePic = localStorage.getItem("profilePicture");
+
+        if (token && username) {
+            document.querySelector(".auth-tab").style.display = "none";
+            const dropdown = document.querySelector(".auth-dropdown");
+            if (dropdown) {
+                dropdown.style.display = "block";
+                document.getElementById("nav-username").textContent = username;
+                document.getElementById("nav-profile-pic").src = profilePic || "/images/default-profile.png";
+            }
+        }
+    </script>
 </body>
 
 </html>
