--- a/frontend/forum/create_group.html
+++ b/frontend/forum/create_group.html
@@ -20,6 +20,18 @@
                     <li><a href="/index.html">Home</a></li>
                     <li><a href="/race_directory.html">Race Directory</a></li>
                     <li><a href="/forum.html">Runner Community</a></li>
+                    <li id="account-tab" class="auth-tab"><a href="/login.html">Login</a></li>
+                    <li class="dropdown auth-dropdown" style="display: none;">
+                        <a href="/account.html">
+                            <img id="nav-profile-pic" src="/images/default-profile.png" alt="Profile"
+                                class="nav-profile-img" />
+                            <span id="nav-username">My Account</span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="/account.html">View Profile</a></li>
+                            <li><a href="/logout.html">Sign Out</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -52,7 +64,21 @@
 
     <script>
         const token = localStorage.getItem("token");
+        const username = localStorage.getItem("username");
+        const profilePic = localStorage.getItem("profilePicture");
 
+        // Show logged-in header dropdown
+        if (token && username) {
+            document.querySelector(".auth-tab").style.display = "none";
+            const dropdown = document.querySelector(".auth-dropdown");
+            if (dropdown) {
+                dropdown.style.display = "block";
+                document.getElementById("nav-username").textContent = username;
+                document.getElementById("nav-profile-pic").src = profilePic || "/images/default-profile.png";
+            }
+        }
+
+        // Handle form submission
         document.getElementById("create-group-form").addEventListener("submit", async (e) => {
             e.preventDefault();
             const raceName = document.getElementById("race-name").value.trim();
