Fix forum header layout and dropdown profile menu

--- a/frontend/forum/category.html
+++ b/frontend/forum/category.html
@@ -12,10 +12,13 @@
 <body class="forum-page">
     <header class="sticky-header">
         <div class="header-inner">
+            <!-- Left Side: Logo + Title -->
             <div class="header-left">
                 <img src="/ultra.png" alt="Ultramarathon Connect Logo" class="logo" />
                 <span class="site-title">UltramarathonConnect</span>
             </div>
+
+            <!-- Right Side: Navigation -->
             <button class="menu-toggle">☰</button>
             <nav class="header-right">
                 <ul class="menu">
