--- a/frontend/forum/comments.html
+++ b/frontend/forum/comments.html
@@ -8,13 +8,16 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 
-<body class="comments-page">
+<body class="forum-page">
     <header class="sticky-header">
         <div class="header-inner">
+            <!-- Left Side: Logo + Title -->
             <div class="header-left">
                 <img src="/ultra.png" alt="Ultramarathon Connect Logo" class="logo" />
                 <span class="site-title">UltramarathonConnect</span>
             </div>
+
+            <!-- Right Side: Navigation -->
             <button class="menu-toggle">☰</button>
             <nav class="header-right">
                 <ul class="menu">
