--- a/frontend/forum/group_forum.html
+++ b/frontend/forum/group_forum.html
@@ -13,7 +13,7 @@
         <div class="header-inner">
             <!-- Left Side: Logo + Title -->
             <div class="header-left">
-                <img src="/ultra.png" alt="Ultramarathon Connect Logo" class="logo" />
+                <img src="../ultra.png" alt="Ultramarathon Connect Logo" class="logo" />
                 <span class="site-title">UltramarathonConnect</span>
             </div>
 
@@ -21,19 +21,19 @@
             <button class="menu-toggle">☰</button>
             <nav class="header-right">
                 <ul class="menu">
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/race_directory.html">Race Directory</a></li>
-                    <li><a href="/forum.html">Runner Community</a></li>
-                    <li id="account-tab" class="auth-tab"><a href="/login.html">Login</a></li>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../race_directory.html">Race Directory</a></li>
+                    <li><a href="../forum/forum.html">Runner Community</a></li>
+                    <li id="account-tab" class="auth-tab"><a href="../login.html">Login</a></li>
                     <li class="dropdown auth-dropdown" style="display: none;">
-                        <a href="/account.html">
-                            <img id="nav-profile-pic" src="/images/default-profile.png" alt="Profile"
+                        <a href="../account.html">
+                            <img id="nav-profile-pic" src="../images/default-profile.png" alt="Profile"
                                 class="nav-profile-img" />
                             <span id="nav-username">My Account</span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="/account.html">View Profile</a></li>
-                            <li><a href="/logout.html">Sign Out</a></li>
+                            <li><a href="../account.html">View Profile</a></li>
+                            <li><a href="../logout.html">Sign Out</a></li>
                         </ul>
                     </li>
                 </ul>
