Fix forum header layout and image path

--- a/frontend/forum/forum.html
+++ b/frontend/forum/forum.html
@@ -14,7 +14,7 @@
         <div class="header-inner">
             <!-- Left Side: Logo + Title -->
             <div class="header-left">
-                <img src="../ultra.png" alt="Ultramarathon Connect Logo" class="logo" />
+                <img src="/ultra.png" alt="Ultramarathon Connect Logo" class="logo" />
                 <span class="site-title">UltramarathonConnect</span>
             </div>
 
