--- a/frontend/forum/comments.html
+++ b/frontend/forum/comments.html
@@ -2,16 +2,9 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Post & Replies - Ultramarathon Connect</title>
-    <link rel="stylesheet" href="/style.css">
-</head>
-
-<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Runner Community - Ultramarathon Connect</title>
+    <title>Post & Replies - Ultramarathon Connect</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="alanai_chatbot/chat-widget.css" />
 </head>
@@ -30,6 +23,17 @@
                     <li><a href="race_directory.html">Race Directory</a></li>
                     <li><a href="forum.html">Runner Community</a></li>
                     <li id="account-tab" class="auth-tab"><a href="login.html">Login</a></li>
+                    <li class="dropdown auth-dropdown" style="display: none;">
+                        <a href="account.html">
+                            <img id="nav-profile-pic" src="images/default-profile.png" alt="Profile"
+                                class="nav-profile-img" />
+                            <span id="nav-username">My Account</span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="account.html">View Profile</a></li>
+                            <li><a href="logout.html">Sign Out</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -61,19 +65,17 @@
 
     <footer class="site-footer">
         <div class="footer-links">
-            <a href="/contact.html">Contact Us</a> |
-            <a href="/privacy.html">Privacy Policy</a> |
-            <a href="/termsofservice.html">Terms of Service</a> |
-            <a href="/faq.html">FAQ</a> |
+            <a href="contact.html">Contact Us</a> |
+            <a href="privacy.html">Privacy Policy</a> |
+            <a href="termsofservice.html">Terms of Service</a> |
+            <a href="faq.html">FAQ</a> |
             <span>Email: <a href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a></span>
         </div>
         <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
     </footer>
 
-    <script src="/index_script.js"></script>
+    <script src="index_script.js"></script>
     <script src="comments_script.js"></script>
-
-    <!-- Header Auth Script -->
     <script>
         const token = localStorage.getItem("token");
         const username = localStorage.getItem("username");
@@ -85,7 +87,7 @@
             if (dropdown) {
                 dropdown.style.display = "block";
                 document.getElementById("nav-username").textContent = username;
-                document.getElementById("nav-profile-pic").src = profilePic || "/images/default-profile.png";
+                document.getElementById("nav-profile-pic").src = profilePic || "images/default-profile.png";
             }
         }
     </script>
