Fix category.js script path so title loads properly

--- a/frontend/forum/category.html
+++ b/frontend/forum/category.html
@@ -7,7 +7,7 @@
     <title>Category Forum - Ultramarathon Connect</title>
     <link rel="stylesheet" href="/style.css" />
     <link rel="stylesheet" href="/alanai_chatbot/chat-widget.css" />
-    <script defer src="/category.js"></script>
+    <script defer src="/forum/category.js"></script>
 </head>
 
 <body class="forum-page">
