Fix mobile header layout: center logo, align toggles properly

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,14 +15,14 @@
 <body class="forum-page">
     <header class="sticky-header dual-row-header">
         <div class="header-top-row">
-            <div class="mobile-header-container">
-                <div id="account-tab" class="auth-tab"></div>
-                <div class="header-left header-center">
-                    <img src="ultra.png" alt="Ultramarathon Connect Logo" class="logo" />
-                    <span class="site-title">UltramarathonConnect</span>
-                </div>
-                <button class="menu-toggle">☰</button>
+            <div id="account-tab" class="auth-tab"></div>
+
+            <div class="header-center">
+                <img src="ultra.png" alt="Ultramarathon Connect Logo" class="logo" />
+                <span class="site-title">UltramarathonConnect</span>
             </div>
+
+            <button class="menu-toggle">☰</button>
         </div>
 
         <div class="header-bottom-row">
