Add favicon to site using ultra_favicon.ico

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css" />
     <link rel="stylesheet" href="alanai_chatbot/chat-widget.css" />
+    <link rel="icon" href="ultra_favicon.ico" type="image/x-icon" />
 </head>
 
 <body class="forum-page">
