Remove outdated comments page and script

--- a/frontend/forum/category.html
+++ b/frontend/forum/category.html
@@ -15,7 +15,7 @@
         <div class="header-top-row">
             <div class="mobile-header-container">
                 <div class="header-left">
-                    <img src="ultra.png" alt="Ultramarathon Connect Logo" class="logo" />
+                    <img src="../ultra.png" alt="Ultramarathon Connect Logo" class="logo" />
                     <span class="site-title">UltramarathonConnect</span>
                 </div>
                 <button class="menu-toggle">☰</button>
