Fix: use absolute paths in profile dropdown to prevent 404 on forum subpages

--- a/frontend/forum/forum.html
+++ b/frontend/forum/forum.html
@@ -19,7 +19,7 @@
                 </div>
                 <button class="menu-toggle">☰</button>
             </div>
-            <div id="account-tab" class="auth-tab mobile-account-tab"></div>
+            <div id="account-tab" class="auth-tab mobile-account-tab" style="display: none;"></div>
         </div>
 
         <div class="header-bottom-row">
