--- a/frontend/forum/forum.html
+++ b/frontend/forum/forum.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Runner Community - Ultramarathon Connect</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="alanai_chatbot/chat-widget.css" />
+    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/alanai_chatbot/chat-widget.css" />
 </head>
 
 <body class="forum-page">
@@ -14,12 +14,12 @@
         <div class="header-top-row">
             <div class="mobile-header-container">
                 <div class="header-left">
-                    <img src="../ultra.png" alt="Ultramarathon Connect Logo" class="logo" />
+                    <img src="/ultra.png" alt="Ultramarathon Connect Logo" class="logo" />
                     <span class="site-title">UltramarathonConnect</span>
                 </div>
                 <button class="menu-toggle">☰</button>
             </div>
-            <div id="account-tab" class="auth-tab mobile-account-tab" style="display: none;"></div>
+            <div id="account-tab" class="auth-tab mobile-account-tab"></div>
         </div>
 
         <div class="header-bottom-row">
@@ -38,32 +38,32 @@
         <p class="forum-subheading">Ask questions, share insights, and connect with ultrarunners around the world.</p>
 
         <section class="forum-categories">
-            <a href="forum/category.html?topic=Training%20Tips" class="category-card">
+            <a href="/forum/category.html?topic=Training%20Tips" class="category-card">
                 <span class="emoji">🏋️</span>
                 <h3>Training Tips</h3>
                 <p>Strategies, plans, and advice from seasoned runners.</p>
             </a>
-            <a href="forum/category.html?topic=Gear%20Recommendations" class="category-card">
+            <a href="/forum/category.html?topic=Gear%20Recommendations" class="category-card">
                 <span class="emoji">🎒</span>
                 <h3>Gear Recommendations</h3>
                 <p>Discuss your favorite gear for trails, races, and recovery.</p>
             </a>
-            <a href="forum/category.html?topic=Race%20Advice" class="category-card">
+            <a href="/forum/category.html?topic=Race%20Advice" class="category-card">
                 <span class="emoji">🥇</span>
                 <h3>Race Advice</h3>
                 <p>Tips on race strategy, pacing, and preparation.</p>
             </a>
-            <a href="forum/category.html?topic=Nutrition%20Tips" class="category-card">
+            <a href="/forum/category.html?topic=Nutrition%20Tips" class="category-card">
                 <span class="emoji">🥗</span>
                 <h3>Nutrition Tips</h3>
                 <p>Talk about fueling, hydration, and supplements.</p>
             </a>
-            <a href="forum/category.html?topic=Meetup%20Requests" class="category-card">
+            <a href="/forum/category.html?topic=Meetup%20Requests" class="category-card">
                 <span class="emoji">🤝</span>
                 <h3>Meetup Requests</h3>
                 <p>Looking to find a training buddy or local group? Post here.</p>
             </a>
-            <a href="forum/category.html?topic=General%20Chat" class="category-card">
+            <a href="/forum/category.html?topic=General%20Chat" class="category-card">
                 <span class="emoji">💬</span>
                 <h3>General Chat</h3>
                 <p>Talk about anything ultrarunning related!</p>
@@ -78,58 +78,35 @@
                 <p>Loading groups...</p>
             </div>
 
-            <a href="forum/create_group.html" class="create-group-btn">+ Create New Training Group</a>
+            <a href="/forum/create_group.html" class="create-group-btn">+ Create New Training Group</a>
         </section>
+    </main>
 
+    <!-- Alan Chat Widget -->
+    <div id="alan-bubble">💬</div>
+    <div id="alan-window">
+        <div id="alan-messages"></div>
+        <form id="alan-form">
+            <input id="alan-input" type="text" placeholder="Ask Alan about races..." />
+            <button type="submit">Send</button>
+        </form>
+    </div>
 
-        <!-- Alan Chat Widget -->
-        <div id="alan-bubble">💬</div>
-        <div id="alan-window">
-            <div id="alan-messages"></div>
-            <form id="alan-form">
-                <input id="alan-input" type="text" placeholder="Ask Alan about races..." />
-                <button type="submit">Send</button>
-            </form>
+    <footer class="site-footer">
+        <div class="footer-links">
+            <a href="/contact.html">Contact Us</a> |
+            <a href="/privacy.html">Privacy Policy</a> |
+            <a href="/termsofservice.html">Terms of Service</a> |
+            <a href="/faq.html">FAQ</a> |
+            <span>Email: <a href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a></span>
         </div>
+        <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
+    </footer>
 
-        <footer class="site-footer">
-            <div class="footer-links">
-                <a href="contact.html">Contact Us</a> |
-                <a href="privacy.html">Privacy Policy</a> |
-                <a href="termsofservice.html">Terms of Service</a> |
-                <a href="faq.html">FAQ</a> |
-                <span>Email: <a href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a></span>
-            </div>
-            <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
-        </footer>
-
-        <script src="forum/forum_script.js"></script>
-        <script src="index_script.js"></script>
-        <script src="alanai_chatbot/alan.js"></script>
-        <script src="inject_account_dropdown.js"></script>
-
-        <!-- Inject dropdown if logged in -->
-        <script>
-            const token = localStorage.getItem("token");
-            const username = localStorage.getItem("username");
-            const profilePic = localStorage.getItem("profilePicture");
-
-            if (token && username) {
-                const accountTab = document.getElementById("account-tab");
-                accountTab.innerHTML = `
-        <div class="dropdown">
-          <a href="account.html" class="dropdown-toggle">
-            <img src="${profilePic || '/images/default-profile.png'}" class="nav-profile-img" alt="Profile" />
-            <span>${username}</span>
-          </a>
-          <ul class="dropdown-menu">
-            <li><a href="account.html">View Profile</a></li>
-            <li><a href="logout.html">Sign Out</a></li>
-          </ul>
-        </div>
-      `;
-            }
-        </script>
+    <script src="/forum/forum_script.js"></script>
+    <script src="/index_script.js"></script>
+    <script src="/alanai_chatbot/alan.js"></script>
+    <script src="/forum/inject_account_dropdown.js"></script>
 </body>
 
 </html>
