--- a/frontend/forum/group_forum.html
+++ b/frontend/forum/group_forum.html
@@ -15,7 +15,7 @@
         <div class="header-top-row">
             <div class="mobile-header-container">
                 <div class="header-left">
-                    <img src="../ultra.png" alt="Ultramarathon Connect Logo" class="logo" />
+                    <img src="/ultra.png" alt="Ultramarathon Connect Logo" class="logo" />
                     <span class="site-title">UltramarathonConnect</span>
                 </div>
                 <button class="menu-toggle">☰</button>
@@ -50,6 +50,7 @@
         <div id="group-posts"></div>
     </main>
 
+    <!-- Alan Chat -->
     <div id="alan-bubble">💬</div>
     <div id="alan-window">
         <div id="alan-messages"></div>
@@ -71,30 +72,7 @@
 
     <script src="/index_script.js"></script>
     <script src="/alanai_chatbot/alan.js"></script>
-    <script src="inject_account_dropdown.js"></script>
-
-    <!-- Inject dropdown if logged in -->
-    <script>
-        const token = localStorage.getItem("token");
-        const username = localStorage.getItem("username");
-        const profilePic = localStorage.getItem("profilePicture");
-
-        if (token && username) {
-            const accountTab = document.getElementById("account-tab");
-            accountTab.innerHTML = `
-        <div class="dropdown">
-          <a href="/account.html" class="dropdown-toggle">
-            <img src="${profilePic || '/images/default-profile.png'}" class="nav-profile-img" alt="Profile" />
-            <span>${username}</span>
-          </a>
-          <ul class="dropdown-menu">
-            <li><a href="/account.html">View Profile</a></li>
-            <li><a href="/logout.html">Sign Out</a></li>
-          </ul>
-        </div>
-      `;
-        }
-    </script>
+    <script src="/forum/inject_account_dropdown.js"></script>
 </body>
 
 </html>
