Fix dropdown path for forum.html to resolve 404 on profile/training log links

--- a/frontend/forum/create_group.html
+++ b/frontend/forum/create_group.html
@@ -70,7 +70,7 @@
 
     <script src="/alanai_chatbot/alan.js"></script>
     <script src="/index_script.js"></script>
-    <script src="inject_account_dropdown.js"></script>
+    <script src="/inject_account_dropdown.js"></script>
 
     <script>
         document.getElementById("create-group-form").addEventListener("submit", async (e) => {
