--- a/frontend/forum/category.html
+++ b/frontend/forum/category.html
@@ -73,7 +73,7 @@
 
     <script src="/index_script.js"></script>
     <script src="/alanai_chatbot/alan.js"></script>
-    <script src="inject_account_dropdown.js"></script>
+    <script src="/inject_account_dropdown.js"></script>
 </body>
 
 </html>
