--- a/frontend/login.html
+++ b/frontend/login.html
@@ -44,6 +44,11 @@
                 <div class="form-group">
                     <label for="password">Password:</label>
                     <input type="password" id="password" name="password" placeholder="Enter your password" required />
+
+                    <div class="show-password-toggle" style="margin-top: 6px;">
+                        <input type="checkbox" id="toggle-password" />
+                        <label for="toggle-password">Show password</label>
+                    </div>
                 </div>
 
                 <button type="submit" class="orange-btn">Login</button>
@@ -90,7 +95,7 @@
             e.preventDefault();
 
             const email = document.getElementById('email').value.trim();
-            const password = document.getElementById('password').value.trim(); // ✅ FIXED HERE
+            const password = document.getElementById('password').value.trim();
 
             const loginMessage = document.getElementById('login-message');
             loginMessage.textContent = '';
@@ -100,12 +105,6 @@
                 loginMessage.textContent = 'Please fill in both fields.';
                 return;
             }
-
-            // DEBUG LOGGING
-            console.log("Raw password (string):", password);
-            const hexPassword = Array.from(new TextEncoder().encode(password))
-                .map(b => b.toString(16).padStart(2, '0')).join('');
-            console.log("Raw password (hex bytes):", hexPassword);
 
             try {
                 const response = await fetch('https://ultramarathon-finder-backend.onrender.com/api/auth/login', {
@@ -142,6 +141,12 @@
                 loginMessage.textContent = 'Error: Could not connect to the server.';
                 loginMessage.classList.add('error-message');
             }
+        });
+
+        // Show/hide password toggle
+        document.getElementById('toggle-password').addEventListener('change', (e) => {
+            const passwordField = document.getElementById('password');
+            passwordField.type = e.target.checked ? 'text' : 'password';
         });
     </script>
 </body>
