Fix show password layout for login and register forms

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -45,9 +45,10 @@
                     <label for="password">Password:</label>
                     <input type="password" id="password" name="password" placeholder="Enter your password" required />
 
-                    <div class="show-password-toggle" style="margin-top: 6px;">
+                    <div class="show-password-toggle"
+                        style="display: flex; align-items: center; gap: 8px; margin-top: 10px;">
                         <input type="checkbox" id="toggle-password" />
-                        <label for="toggle-password">Show password</label>
+                        <label for="toggle-password" style="margin: 0;">Show password</label>
                     </div>
                 </div>
 
