--- a/frontend/register.html
+++ b/frontend/register.html
@@ -55,9 +55,10 @@
                         <input type="password" id="confirm-password" name="confirm-password"
                             placeholder="Confirm your password" required />
 
-                        <div class="show-password-toggle">
+                        <div class="show-password-toggle"
+                            style="display: flex; align-items: center; gap: 8px; margin-top: 10px;">
                             <input type="checkbox" id="toggle-password" />
-                            <label for="toggle-password">Show password</label>
+                            <label for="toggle-password" style="margin: 0;">Show password</label>
                         </div>
 
                         <small>Password must be at least 6 characters long and include one uppercase letter, one number,
